--- a/package.json
+++ b/package.json
@@ -9,8 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.9.0",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/lab": "^5.0.0-alpha.85",
+    "@mui/material": "^5.8.3",
+    "axios": "^0.27.2",
+    "material": "^0.4.3",
     "next": "12.1.6",
+    "notistack": "^2.0.5",
     "react": "18.1.0",
+    "react-cookie": "^4.1.1",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
