--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@mui/lab": "^5.0.0-alpha.85",
     "@mui/material": "^5.8.3",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "material": "^0.4.3",
     "next": "12.1.6",
     "notistack": "^2.0.5",
     "react": "18.1.0",
+    "react-chartjs-2": "^4.2.0",
     "react-cookie": "^4.1.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.1.0"
